--- a/index.html
+++ b/index.html
@@ -1,40 +1,188 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>F1 Flappy Style Game</title>
-  <style>
-    body {
-      margin: 0;
-      background: #111;
-    }
-    canvas {
-      display: block;
-      margin: 0 auto;
-      background: #222;
-      border: 2px solid #fff;
-    }
-#pauseBtn {
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 10px 20px;
-  font-size: 18px;
-  background: #222;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  z-index: 10;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Highway Racer</title>
+<style>
+body {
+margin: 0;
+padding: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+background: linear-gradient(to bottom, #111, #333);
+font-family: Arial, sans-serif;
+overflow: hidden;
 }
 
-  </style>
+.game-container {
+position: relative;
+margin: 0 auto;
+}
+
+canvas {
+display: block;
+background: #222;
+border: 3px solid #444;
+border-radius: 8px;
+box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.game-controls {
+display: flex;
+justify-content: center;
+gap: 15px;
+margin-top: 15px;
+}
+
+#pauseBtn, #musicBtn {
+padding: 8px 16px;
+font-size: 16px;
+background: #333;
+color: #fff;
+border: 2px solid #555;
+border-radius: 8px;
+cursor: pointer;
+transition: all 0.2s;
+}
+
+#pauseBtn:hover, #musicBtn:hover {
+background: #444;
+box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+}
+
+.info {
+color: #aaa;
+font-size: 14px;
+text-align: center;
+margin-top: 15px;
+}
+
+.title {
+text-align: center;
+color: #fff;
+font-size: 28px;
+margin-bottom: 20px;
+text-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+}
+
+/* Keyboard control guide */
+.controls {
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+gap: 15px;
+margin-top: 20px;
+}
+
+.key {
+display: inline-block;
+padding: 5px 10px;
+background: #444;
+color: #fff;
+border-radius: 4px;
+font-size: 12px;
+min-width: 20px;
+text-align: center;
+}
+
+.key-combo {
+display: flex;
+align-items: center;
+gap: 5px;
+color: #aaa;
+}
+
+/* Stats panel */
+.stats-panel {
+margin-top: 20px;
+padding: 10px;
+background: rgba(0, 0, 0, 0.5);
+border-radius: 8px;
+color: #fff;
+text-align: center;
+}
+
+.stats-panel h3 {
+margin: 0 0 10px 0;
+color: #0f0;
+}
+
+.stats-row {
+display: flex;
+justify-content: space-between;
+margin-bottom: 5px;
+}
+
+.stats-label {
+color: #aaa;
+}
+
+.stats-value {
+color: #fff;
+font-weight: bold;
+}
+</style>
 </head>
 <body>
-  <canvas id="game" width="400" height="600"></canvas>
-  <button id="pauseBtn">⏸ Pause</button>
-  <script src="game.js"></script>
+<div class="game-container">
+<h1 class="title">Highway Racer</h1>
+<canvas id="game" width="400" height="600"></canvas>
+
+<div class="game-controls">
+<button id="pauseBtn">⏸ Pause</button>
+<button id="musicBtn">🔊 Music On</button>
+</div>
+
+<div class="controls">
+<div class="key-combo">
+<span class="key">←</span>
+<span class="key">→</span>
+<span>to steer</span>
+</div>
+<div class="key-combo">
+<span class="key">↓</span>
+<span>to brake</span>
+</div>
+<div class="key-combo">
+<span class="key">SPACE</span>
+<span>to pause</span>
+</div>
+<div class="key-combo">
+<span class="key">M</span>
+<span>for music</span>
+</div>
+</div>
+
+<div class="stats-panel">
+<h3>CURRENT GAME</h3>
+<div class="stats-row">
+<span class="stats-label">High Score:</span>
+<span class="stats-value" id="high-score">0</span>
+</div>
+<div class="stats-row">
+<span class="stats-label">Best Distance:</span>
+<span class="stats-value" id="best-distance">0.0 miles</span>
+</div>
+<div class="stats-row">
+<span class="stats-label">Best Time:</span>
+<span class="stats-value" id="best-time">0:00</span>
+</div>
+</div>
+
+<div class="info">
+Drive carefully and avoid crashing into other cars!
+<br>
+Reach distance milestones for bonus points!
+</div>
+</div>
+
+<!-- Audio resources -->
+<audio id="bg-music" src="Lynyrd Skynyrd - Free Bird (Official Audio) [0LwcvjNJTuM].mp4" preload="auto" loop></audio>
+
+<script src="game.js"></script>
 </body>
 </html>
